Bug 1894329 - Increase the size of td and button elements in about:networking on Android for readability r=valentin,desktop-theme-reviewers,emilio
Differential Revision: https://phabricator.services.mozilla.com/D210498

UltraBlame original commit: 6f5589c682a6d6f2ee9a43936c56bef595cb2755

--- a/toolkit/themes/mobile/global/aboutNetworking.css
+++ b/toolkit/themes/mobile/global/aboutNetworking.css
@@ -1,3 +1,61 @@
+/
+*
+This
+Source
+Code
+Form
+is
+subject
+to
+the
+terms
+of
+the
+Mozilla
+Public
+*
+License
+v
+.
+2
+.
+0
+.
+If
+a
+copy
+of
+the
+MPL
+was
+not
+distributed
+with
+this
+*
+file
+You
+can
+obtain
+one
+at
+http
+:
+/
+/
+mozilla
+.
+org
+/
+MPL
+/
+2
+.
+0
+/
+.
+*
+/
 #
 sectionTitle
 {
@@ -41,7 +99,7 @@ font
 -
 size
 :
-2em
+large
 ;
 vertical
 -
@@ -74,6 +132,13 @@ top
 0
 ;
 }
+/
+*
+*
+Categories
+*
+*
+/
 #
 categories
 {
@@ -91,7 +156,7 @@ font
 -
 size
 :
-2em
+larger
 ;
 padding
 :
@@ -109,6 +174,13 @@ cursor
 :
 pointer
 ;
+/
+*
+Center
+category
+names
+*
+/
 display
 :
 flex
@@ -147,6 +219,14 @@ weight
 bold
 ;
 }
+/
+*
+*
+Content
+area
+*
+*
+/
 .
 main
 -
@@ -225,7 +305,7 @@ font
 -
 size
 :
-larger
+large
 ;
 white
 -
@@ -243,5 +323,54 @@ bottom
 0
 .
 25em
+;
+font
+-
+size
+:
+medium
+;
+padding
+-
+inline
+:
+1em
+;
+}
+label
+{
+font
+-
+size
+:
+medium
+;
+}
+input
+{
+font
+-
+size
+:
+medium
+;
+}
+button
+{
+font
+-
+size
+:
+large
+;
+}
+#
+logging
+{
+font
+-
+size
+:
+medium
 ;
 }
